--- a/main.html
+++ b/main.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>One Page Web Application</title>
+    <title>Dataverse</title>
+    <link rel="icon" type="image/png" href="./img/favicon.png" /> <!-- Change this path -->
     <!-- Bootstrap CSS -->
     <link
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -334,7 +335,7 @@
       <div class="mx-5 md:mx-l5 text-center relative z-10">
         <div class="inline-block br-round bg-indigo-30 indigo-lightest p-2 px-3 fs-s2 mb-5 poppins-semibold">
           <div class="inline-block bg-indigo indigo-lightest br-round px-3 py-2 mr-1 fs-s3 poppins-thin">
-            Data Mining
+            MAchine Learning
           </div>
           by Ghanshyamsinh Zala
         </div>
