--- a/main.html
+++ b/main.html
@@ -335,7 +335,7 @@
       <div class="mx-5 md:mx-l5 text-center relative z-10">
         <div class="inline-block br-round bg-indigo-30 indigo-lightest p-2 px-3 fs-s2 mb-5 poppins-semibold">
           <div class="inline-block bg-indigo indigo-lightest br-round px-3 py-2 mr-1 fs-s3 poppins-thin">
-            MAchine Learning
+            Machine Learning
           </div>
           by Ghanshyamsinh Zala
         </div>
